--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "NFT-Marketplace",
-  "author": "abhishek chauhan",
-  "email": "ac12644@gmail.com",
+  "author": "Guilherme Bianeck",
+  "email": "Guilherme@makeablock.com",
   "version": "1.0",
   "private": false,
   "scripts": {
